# serverless-twitter-bots

./: .gitignore  bot-authorizer.py  handler.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  songs.json  store-lyrics.py
tests/: test_twitter_bot_idiotas_adorables.py
twitter_bot_idiotas_adorables/: tweet-function.py
