[tool.poetry]
name = "twitter-bot-idiotas-adorables"
version = "0.1.0"
description = ""
authors = ["Joca <jpereyraleon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lyricsgenius = "^1.8.6"
tweepy = "^3.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
